# Mesh-Raytracing

./: .gitignore  CMakeLists.txt  README.txt
src/: main.cpp
src/shaders/: fs.glsl  vs.glsl
